<resources>
    <string name="app_name">job</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="logo_dicoding">Gambar Logo Dicoding</string>
    <string name="logo_login">Gambar Logo Login</string>
    <string name="logo_signup">Gambar Logo Signup</string>
    <string name="logo_welcome">Gambar Logo Welcome</string>
    <string name="hint_username">Masukkan Username</string>
    <string name="hint_password">Masukkan Password</string>
    <string name="hint_email">Masukkan Email</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="title_reg_page">Create an account!</string>
    <string name="message_reg_page">Lets create account together</string>
    <string name="already_have_acc">Already have an account?</string>
    <string name="login_here">Login here</string>
    <string name="title_login_page">Welcome Back!</string>
    <string name="message_login_page">Login your account</string>
    <string name="dont_have_acc">Don`t have an account yet?</string>
    <string name="regist_here">Register here</string>
    <string name="title_welcome_page">Hello, Lets Find Your Job With Us</string>
    <string name="message_welcome_page">We help you find your job based on your talent and skill</string>
    <string name="error_email">Email tidak valid</string>
    <string name="error_password">Password tidak boleh kurang dari 8 karakter</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="searchbar_hint">Masukkan jenis pekerjaan yang dicari</string>
    <string name="change_settings">Ubah Pengaturan</string>
    <string name="logout">Keluar</string>
    <string name="list_job">List Pekerjaan</string>
	<string name="select_a_job">Select a Job</string>
	<string name="profile_page">Profile</string>
    <string name="search_page">Search</string>
    <string name="about_page">About</string>
    <string name="description_about">Joblyst is a job search application that helps you find the right job for your skills and interests.</string>
    <string name="key_features">Key Features:</string>
    <string name="job_search">- Job Search</string>
    <string name="home">- Home</string>
    <string name="detail_job">- Detail Job</string>
    <string name="profile">- Profile</string>
    <string name="theme_dark">- Theme Dark</string>
    <string name="change_language">- Change Language</string>
    <string name="home_page">Home</string>
    <string name="theme_page">Theme</string>
    <string name="detail_qualifications">- Blalaaaaaaaaaaaaaa</string>
</resources>    